ran './dev-tools/scripts/branchSplitter.py 56842452026' script